gccida/g1/apply_result_size
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_result_size/src/builtins.c:1431:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v2; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_result_size/src/builtins.c:1432:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v3; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_result_size/src/builtins.c:1434:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v5; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_result_size/src/builtins.c:1435:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v6; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_result_size/src/builtins.c:1436:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v7; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_result_size/src/builtins.c:1438:6: error: use of undeclared identifier 'size_5'; did you mean 'sizeof'?
if ( size_5 >= 0 ) 
     ^~~~~~
     sizeof
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_result_size/src/builtins.c:1438:13: error: expected expression
if ( size_5 >= 0 ) 
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_result_size/src/builtins.c:1439:8: error: use of undeclared identifier 'size_5'; did you mean 'sizeof'?
return size_5; 
       ^~~~~~
       sizeof
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_result_size/src/builtins.c:1439:14: error: expected expression
return size_5; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_result_size/src/builtins.c:1440:1: error: use of undeclared identifier 'size_5'
size_5 = 0; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_result_size/src/builtins.c:1505:6: error: use of undeclared identifier 'size_5'; did you mean 'sizeof'?
if ( size_5 % v4 ) 
     ^~~~~~
     sizeof
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_result_size/src/builtins.c:1505:13: error: expected expression
if ( size_5 % v4 ) 
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_result_size/src/builtins.c:1506:1: error: use of undeclared identifier 'size_5'
size_5 = v4 * ( ( size_5 + v4 - 1) / v4); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_result_size/src/builtins.c:1506:19: error: use of undeclared identifier 'size_5'
size_5 = v4 * ( ( size_5 + v4 - 1) / v4); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_result_size/src/builtins.c:1507:1: error: use of undeclared identifier 'size_5'
size_5 += mode_size[v3]; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_result_size/src/builtins.c:1515:1: error: use of undeclared identifier 'size_5'
size_5 = 116; 
^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/apply_result_size/src/obj/builtins.o] Error 1
